[tool.poetry]
name = "aprenderpythonconejemplos"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.17.0"
psutil = "^5.7.2"
fileupload = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
